--- a/VuetifySpa.Web/Views/_ViewImports.cshtml
+++ b/VuetifySpa.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using VuetifySpa.Web
-@using VuetifySpa.Web.Models
+@using VuetifySpa.Data.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
