--- a/VuetifySpa.Web/Views/Shared/_Layout.cshtml
+++ b/VuetifySpa.Web/Views/Shared/_Layout.cshtml
@@ -4,15 +4,24 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - aspnetcore_Vue_starter</title>
+    <title>@ViewData["Title"] - aspnetcore</title>
 
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+    <environment names="Staging,Production">
+        <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+    </environment>
+    <link href="~/dist/vendor.css" asp-append-version="true" rel="stylesheet">
+   
 </head>
 
 <body>
     @RenderBody()
 
     <script src="~/dist/vendor.js" asp-append-version="true"></script>
+    
+    
+
     @RenderSection("scripts", required: false)
 </body>
 
