--- a/VuetifySpa.Web/Views/Shared/_Layout.cshtml
+++ b/VuetifySpa.Web/Views/Shared/_Layout.cshtml
@@ -1,13 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   
-
-
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
